--- a/backEnd/backend/requirements.txt
+++ b/backEnd/backend/requirements.txt
@@ -1,4 +1,3 @@
-Django
-djangorestframework
-djangorestframework-authtoken
-psycopg2-binary
+Django==4.2.7
+djangorestframework==3.20.1
+psycopg2-binary==2.9.9
