--- a/mobile/mycrewmanager/android/local.properties
+++ b/mobile/mycrewmanager/android/local.properties
@@ -1,5 +1,5 @@
-flutter.sdk=C:\\Users\\Ralph Mamaril\\flutter
-sdk.dir=C:\\Users\\Ralph Mamaril\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\Aaron\\AppData\\Local\\flutter
+sdk.dir=C:\\Users\\Aaron\\AppData\\Local\\Android\\sdk
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
