--- a/mobile/mycrewmanager/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/mobile/mycrewmanager/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\dev\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\AMD\Documents\myCrewManager\My-Crew-Manager\mobile\mycrewmanager
+FLUTTER_ROOT=C:\Flutter\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\joshu\OneDrive\Desktop\GitHub\My-Crew-Manager\mobile\mycrewmanager
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
