--- a/mobile/mycrewmanager/pubspec.yaml
+++ b/mobile/mycrewmanager/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   retrofit: ^4.7.2
   json_annotation: ^4.9.0
   get_it: ^8.2.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:    # CRITICAL: Required for Flutter project testing - DO NOT REMOVE
