--- a/mobile/mycrewmanager/pubspec.yaml
+++ b/mobile/mycrewmanager/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   camera: ^0.10.5+5
   image_picker: ^1.0.4
   permission_handler: ^11.1.0
+  file_picker: ^8.1.2
 
   universal_html: ^2.2.4
   flutter_riverpod: ^2.6.1
