--- a/mobile/mycrewmanager/ios/Flutter/Generated.xcconfig
+++ b/mobile/mycrewmanager/ios/Flutter/Generated.xcconfig
@@ -1,11 +1,12 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Flutter\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\joshu\OneDrive\Desktop\GitHub\My-Crew-Manager\mobile\mycrewmanager
+FLUTTER_ROOT=C:\Users\Ralph Mamaril\flutter
+FLUTTER_APPLICATION_PATH=D:\My-Crew-Manager\mobile\mycrewmanager
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
+FLUTTER_CLI_BUILD_MODE=debug
 EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
 EXCLUDED_ARCHS[sdk=iphoneos*]=armv7
 DART_OBFUSCATION=false
