--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "avdmanager.sdkPath": "c:\\Users\\Aaron\\GitHub Repos\\My-Crew-Manager\\users"
 }
