BASE URL configuration for all implementations

--- a/.env
+++ b/.env
@@ -1,4 +1,38 @@
-VITE_API_BASE_URL=http://localhost:8000
+# =============================================================================
+# CENTRALIZED IP CONFIGURATION - SINGLE SOURCE OF TRUTH
+# =============================================================================
+# To change IP for ALL components (Web, Django, Mobile), update these 3 variables:
+# 1. Change DEVICE_IP to your actual device IP (e.g., 192.168.1.100)
+# 2. Update VITE_API_BASE_URL with the same IP
+# 3. Update MOBILE_API_BASE_URL with the same IP
+# 4. Run: python scripts/sync_mobile_config.py
+# 5. Start Django: python manage.py runserver 0.0.0.0:8000
+# =============================================================================
+
+# API Configuration (Centralized IP Management)
+VITE_API_BASE_URL=http://localhost:8000  # Web app API calls - change localhost to your device IP
+DEVICE_IP=localhost                       # Your device IP - change to actual IP (e.g., 192.168.1.100)
+DJANGO_HOST=0.0.0.0                      # Django server host (0.0.0.0 = network access, 127.0.0.1 = localhost only)
+DJANGO_PORT=8000                         # Django server port
+
+# Mobile Configuration
+MOBILE_API_BASE_URL=http://localhost:8000  # Mobile app API calls - change localhost to your device IP
+
+# =============================================================================
+# QUICK IP CHANGE INSTRUCTIONS:
+# =============================================================================
+# For Network Access (multiple devices):
+# 1. Find your IP: ipconfig (Windows) or ifconfig (macOS/Linux)
+# 2. Replace 'localhost' with your IP in the 3 variables above
+# 3. Run: python scripts/sync_mobile_config.py
+# 4. Start: python manage.py runserver 0.0.0.0:8000
+# 5. Access from other devices: http://YOUR_IP:8000/admin/
+#
+# For Localhost Only:
+# 1. Keep all URLs as 'localhost'
+# 2. Start: python manage.py runserver
+# 3. Access: http://localhost:8000/admin/
+# =============================================================================
 
 DEBUG=True
 SECRET_KEY=django-insecure-c-5y7c^n+=8ci@_a4ebrflde2o@%w$@iur0e7&582*&x4v(g=z   
@@ -7,7 +41,6 @@ DB_USER=postgres
 DB_PASSWORD=1401
 DB_HOST=localhost
 DB_PORT=5432
-
 
 # API Keys (Required to enable respective provider)
 ANTHROPIC_API_KEY="your_anthropic_api_key_here"       # Required: Format: sk-ant-api03-...                                                                      
@@ -20,4 +53,4 @@ GROQ_API_KEY="YOUR_GROQ_KEY_HERE"                     # Optional, for Groq model
 OPENROUTER_API_KEY="YOUR_OPENROUTER_KEY_HERE"         # Optional, for OpenRouter models.                                                                        
 AZURE_OPENAI_API_KEY="your_azure_key_here"            # Optional, for Azure OpenAI models (requires endpoint in .taskmaster/config.json).                       
 OLLAMA_API_KEY="your_ollama_api_key_here"             # Optional: For remote Ollama servers that require authentication.                                        
-GITHUB_API_KEY="your_github_api_key_here"             # Optional: For GitHub import/export features. Format: ghp_... or github_pat_...                          
+GITHUB_API_KEY="your_github_api_key_here"             # Optional: For GitHub import/export features. Format: ghp_... or github_pat_...
