--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework>=3.14.0
 psycopg2-binary>=2.9.9
 django-cors-headers>=4.3.1
 python-decouple
+python-dotenv
 djangorestframework-simplejwt>=5.3.1
 channels
 channels-redis
