Add advanced editing and batch save for project backlog NOT FINAL
Introduces advanced editing capabilities for project backlog items, including batch save, edit, and delete for epics, sub-epics, user stories, and tasks. Adds modals for editing members, features, goals, and timeline tasks. Updates local state with real backend IDs after creation, improves UI for editing and deleting, and enhances .gitignore to exclude migration files. Also adds new project proposal PDFs and updates the Project model to include an updated_at field.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ __pycache__/
 # OS specific
 .DS_Store
 .env
+backend/apps/ai_api/migrations/0005_epic_is_complete_project_updated_at_and_more.py
+/backend/apps/ai_api/migrations
