--- a/mobile/mycrewmanager/ios/Flutter/Generated.xcconfig
+++ b/mobile/mycrewmanager/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Flutter\flutter
-FLUTTER_APPLICATION_PATH=E:\Github\My-Crew-Manager\mobile\mycrewmanager
+FLUTTER_ROOT=C:\Users\Aaron\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\Aaron\GitHub Repos\My-Crew-Manager\mobile\mycrewmanager
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
