--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ DEBUG=True
 SECRET_KEY=django-insecure-c-5y7c^n+=8ci@_a4ebrflde2o@%w$@iur0e7&582*&x4v(g=z   
 DB_NAME=mycrewmanager_db
 DB_USER=postgres
-DB_PASSWORD=1401
+DB_PASSWORD=12345
 DB_HOST=localhost
 DB_PORT=5432
 
@@ -54,3 +54,13 @@ OPENROUTER_API_KEY="YOUR_OPENROUTER_KEY_HERE"         # Optional, for OpenRouter
 AZURE_OPENAI_API_KEY="your_azure_key_here"            # Optional, for Azure OpenAI models (requires endpoint in .taskmaster/config.json).                       
 OLLAMA_API_KEY="your_ollama_api_key_here"             # Optional: For remote Ollama servers that require authentication.                                        
 GITHUB_API_KEY="your_github_api_key_here"             # Optional: For GitHub import/export features. Format: ghp_... or github_pat_...
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=465
+EMAIL_USE_SSL=True
+EMAIL_HOST_USER=mycrewmanager.ml@gmail.com
+EMAIL_HOST_PASSWORD=nlxu bovq nqfs jzfo
+DEFAULT_FROM_EMAIL=My Crew Manager <mycrewmanager.ml@gmail.com>
+VERIFICATION_CODE_TTL_MIN=10
+VERIFICATION_MAX_ATTEMPTS=5
+VERIFICATION_RESEND_COOLDOWN_SEC=60
