--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ DEBUG=True
 SECRET_KEY=django-insecure-c-5y7c^n+=8ci@_a4ebrflde2o@%w$@iur0e7&582*&x4v(g=z   
 DB_NAME=mycrewmanager_db
 DB_USER=postgres
-DB_PASSWORD=12345
+DB_PASSWORD=root
 DB_HOST=localhost
 DB_PORT=5432
 
